start with geolocation

--- a/index.html
+++ b/index.html
@@ -42,33 +42,28 @@
       </form>
       <div class="row current-weather">
         <div class="col-8">
-          <h1 id="city-now">Lisbon</h1>
+          <h1 id="city-now"></h1>
           <p class="day text">
             Last Updated:
-            <span class="day" id="current-time">Saturday, 2PM</span>
+            <span class="day" id="current-time"></span>
           </p>
         </div>
         <div class="col-4" id="currenttemperature">
           <div class="row dailytemperature">
             <div class="col-lg-4">
-              <img
-                src="images/red/melting.png"
-                alt="sunny"
-                width="90"
-                id="icon"
-              />
+              <img src="" alt="currenticon" width="90" id="icon" />
             </div>
             <div class="col-lg-8">
               <span class="temperaturenow">
-                <span id="temp-now">25</span>°<a
+                <span id="temp-now"></span>°<a
                   href="#"
                   id="centi"
                   class="active"
                   >C</a
                 >|<a href="#" id="far">F</a>
                 <div class="daytemperatures">
-                  Maximum temperature: <span id="temp-max">32</span>° <br />
-                  Minimum temperature: <span id="temp-min">25</span>°
+                  Maximum temperature: <span id="temp-max"></span>° <br />
+                  Minimum temperature: <span id="temp-min"></span>°
                 </div>
               </span>
             </div>
