adding Git link

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
     </div>
     <div class="footer">
-      <a href="https://github.com/Biurius/Weather-Project.git" target="_blank"
+      <a href="https://github.com/Biurius/weather_2.1.git" target="_blank"
         >Open-source code</a
       >
       by Beatriz Santos
