add weather details (wind,humidity,description)

--- a/index.html
+++ b/index.html
@@ -43,9 +43,18 @@
       <div class="row current-weather">
         <div class="col-8">
           <h1 id="city-now"></h1>
-          <p class="day text">
+          <p class="daytext">
             Last Updated:
-            <span class="day" id="current-time"></span>
+            <span class="day" id="current-time"></span> <br />
+            <span class="fulldescription"
+              >Humidity: <span id="humidity"></span>%</span
+            >
+            <br />
+            <span class="fulldescription"
+              >Wind Speed: <span id="wind-speed"></span>Km/hr</span
+            >
+            <br />
+            <span class="fulldescription" id="weather-description"></span>
           </p>
         </div>
         <div class="col-4" id="currenttemperature">
