--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               >Humidity: <span id="humidity"></span>%</span
             >
             <br />
-            <span class="fulldescription"
+            <span class="fulldescription wind"
               >Wind Speed: <span id="wind-speed"></span>Km/hr</span
             >
             <br />
