Insert fake data forecast

--- a/index.html
+++ b/index.html
@@ -79,46 +79,11 @@
           </div>
         </div>
       </div>
-      <div class="row forecast">
+      <div class="row forecast" id="weather-forecast">
         <div class="col align-self-center">
           <h6>Sunday</h6>
           <img src="images/red/sun.png" alt="sunny" width="50" height="50" />
           <p class="maxemin">26° | 22°</p>
-        </div>
-        <div class="col align-self-center">
-          <h6>Monday</h6>
-          <img
-            src="images/red/suncloud.png"
-            alt="sunny"
-            width="50"
-            height="50"
-          />
-          <p class="maxemin">27° | 19°</p>
-        </div>
-        <div class="col align-self-center">
-          <h6>Tuesday</h6>
-          <img
-            src="images/red/sunrain.png"
-            alt="sunny"
-            width="50"
-            height="50"
-          />
-          <p class="maxemin">28° | 21°</p>
-        </div>
-        <div class="col align-self-center">
-          <h6>Wednesday</h6>
-          <img
-            src="images/red/sunsent.png"
-            alt="sunny"
-            width="50"
-            height="50"
-          />
-          <p class="maxemin">22° | 16°</p>
-        </div>
-        <div class="col align-self-center">
-          <h6>Sunday</h6>
-          <img src="images/red/sun.png" alt="sunny" width="50" height="50" />
-          <p class="maxemin">26° | 19°</p>
         </div>
       </div>
       <div id="currentlocation">
