--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       </div>
       <div class="row forecast" id="weather-forecast">
         <div class="col align-self-center">
-          <h6>Sunday</h6>
-          <img src="images/red/sun.png" alt="sunny" width="50" height="50" />
-          <p class="maxemin">26° | 22°</p>
+          <h6></h6>
+          <img src="" width="50" height="50" />
+          <p class="maxemin">|</p>
         </div>
       </div>
       <div id="currentlocation">
