Solve the Forecast Bug

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="row forecast" id="weather-forecast">
-        <div class="col align-self-center">
+        <div class="col-2">
           <h6></h6>
           <img src="" width="50" height="50" />
           <p class="maxemin">|</p>
